header section completed

--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ header {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+
+    margin-bottom: 130px;
 }
 
 header .hero-container {
