--- a/style.css
+++ b/style.css
@@ -17,6 +17,22 @@ a {
     background-color: #FF5959;
 }
 
+button,
+input[type="submit"] {
+    border: none;
+}
+
+input[type="submit"] {
+    color: #FFFFFF;
+    background-color: #FF5959;
+}
+
+/* Hide incease and decrease arrow in number input type. */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    display: none;
+}
+
 
 /* ===================================================== */
 /* ============= Colors ================================ */
@@ -48,7 +64,7 @@ header {
 
 header .hero-container {
     text-align: center;
-    width: 60%;
+    width: 825px;
     margin: 0 auto;
     padding-top: 170px;
 }
@@ -83,3 +99,71 @@ header .hero-container a {
 header .hero-container a:hover {
     background-color: #ff4343;
 }
+
+
+/* ===================================================== */
+/* ============= Main ================================== */
+/* ===================================================== */
+
+/* ============= Donate Today Section ================== */
+.donate-today {
+    width: 825px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 130px;
+}
+
+.donate-today h2.title {
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 54px;
+
+    margin-bottom: 20px;
+}
+
+.donate-today p.description {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+
+    margin-bottom: 50px;
+}
+
+.donate-today .amount-container button {
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 36px;
+    padding: 20px 24px;
+    border: 2px solid #FFFFFF;
+    cursor: pointer;
+}
+
+.donate-today .amount-container {
+    margin-bottom: 40px;
+}
+
+.donate-today .amount-container button:hover {
+    color: #FF5959;
+    background-color: #FFEEEE;
+    border: 2px solid #FF5959;
+}
+
+.donate-today input[type="number"] {
+    width: 200px;
+    padding: 8px 16px;
+    margin-bottom: 40px;
+}
+
+.donate-today input[type="submit"] {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+    padding: 12px 16px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.donate-today input[type="submit"]:hover {
+    background-color: #ff4343;
+}
+
