--- a/style.css
+++ b/style.css
@@ -350,3 +350,27 @@ header .hero-container a:hover {
 }
 
 
+/* ===================================================== */
+/* ============= Footer ================================ */
+/* ===================================================== */
+footer {
+    text-align: center;
+    background-color: #0B0D17;
+    padding: 40px 0;
+}
+
+footer h1 {
+    font-family: 'Lobster', cursive;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 44px;
+    color: #FF5959;
+    margin-bottom: 24px;
+}
+
+footer p {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #D9DBE1;
+}
